--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Quizdroid"
+        android:name=".QuizApp"
         tools:targetApi="31">
         <activity
             android:name=".secondMarvelAnswer"
@@ -47,6 +48,9 @@
             android:exported="false" />
         <activity
             android:name=".firstMathQuestion"
+            android:exported="false" />
+        <activity
+            android:name=".AnswerActivity"
             android:exported="false" />
         <activity
             android:name=".QuestionActivity"
