--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +20,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
+
         <activity
             android:name=".QuestionActivity"
             android:exported="false" />
@@ -26,9 +30,13 @@
 
         <activity android:name=".SettingsActivity" />
 
-        <activity
-            android:name=".TopicOverviewActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".TopicOverviewActivity"-->
+<!--            android:exported="false" />-->
+
+        <activity android:name=".TopicOverviewActivity" android:exported="false">
+
+        </activity>
 
         <activity
             android:name=".MainActivity"
